--- a/style.css
+++ b/style.css
@@ -6,7 +6,10 @@ div {
     color: blanchedalmond; */
 }
 .title {
-    padding: 50px;
+    padding: 30px;
+}
+.title h1, .title h2 {
+    font-family: 'Press Start 2P', cursive;
 }
 .navBar li {
     list-style-type: none;
