--- a/style.css
+++ b/style.css
@@ -13,7 +13,33 @@ div {
 }
 .navBar li {
     list-style-type: none;
-    display: inline;
+    /* display: inline; */
     /* padding: 3px; */
     /* margin: 0px; */
+}
+.navBar {
+    overflow: hidden;
+    background-color: #333;
+}
+.navBar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+.navBar a:hover {
+    background-color: #ddd;
+    color: black;
+}
+.navBar a:active {
+    background-color: #04AA6D;
+    color: white;
+}
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
