Fixed sticky menu and div padding and margin

--- a/style.css
+++ b/style.css
@@ -1,34 +1,39 @@
 div {
-    border: 1px solid black;
-    margin: 10px;
-    padding: 5px;
+    /* border: 1px solid black; */
     /* background-color: black;
     color: blanchedalmond; */
 }
+.content, .about, .aboutText, .projects, .project2, .project1, .resume, .resumeText, .contact, .contactText {
+    margin: 10px;
+    padding: 5px;
+}
 .title {
     padding: 30px;
+    margin: 10px;
 }
 .title h1, .title h2 {
     font-family: 'Press Start 2P', cursive;
 }
 .navBar li {
     list-style-type: none;
-    /* display: inline; */
-    /* padding: 3px; */
-    /* margin: 0px; */
+    display: inline;
+    /* padding: 3px;
+    margin: 0px; */
 }
 .navBar {
-    overflow: hidden;
+    position:-webkit-sticky;
+    position: sticky;
+    top: 0;
     background-color: #333;
+    margin: 0px;
+    padding: 5px;
 }
 .navBar a {
-    float: left;
-    display: block;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
+    padding: 1px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 12px;
 }
 .navBar a:hover {
     background-color: #ddd;
@@ -38,8 +43,8 @@ div {
     background-color: #04AA6D;
     color: white;
 }
-.sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
+.footerMessage {
+    text-align: center;
+    margin: 10px;
+    padding: 5px;
 }
