--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@ div {
     /* background-color: black;
     color: blanchedalmond; */
 }
+footer, h3, .navBar a {
+    font-weight: bold;
+}
+footer {
+    font-style: italic;
+}
 .content, .about, .aboutText, .projects, .project2, .project1, .resume, .resumeText, .contact, .contactText {
     margin: 10px;
     padding: 5px;
