--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
-div {
+* {
     /* border: 1px solid black; */
     /* background-color: black;
     color: blanchedalmond; */
+}
+body {
+    border: 5px solid #333;
+    margin: 5px;
 }
 footer, h3, .navBar a {
     font-weight: bold;
