--- a/style.css
+++ b/style.css
@@ -59,6 +59,19 @@ footer {
     background-color: #04AA6D;
     color: white;
 }
+h3 {
+    text-align: center;
+    font-size: 22px;
+    margin-top: 45px;
+    margin-bottom: 45px;
+}
+.aboutText img {
+    border: 2px solid #333;
+    border-radius: 10%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 .footerMessage {
     text-align: center;
     margin: 10px;
@@ -88,7 +101,13 @@ footer {
         padding-right: 27px;
     }
     h3 {
+        text-align: left;
         font-size: 45px;
+    }
+    .aboutText img {
+        border: 4px solid #333;
+        width: 250px;
+        height: 250px;
     }
     p {
         font-size: 30px;
