Add project descriptions, gitRepo class, gitRepo icon css

--- a/style.css
+++ b/style.css
@@ -73,12 +73,16 @@ h3 {
     margin-left: auto;
     margin-right: auto;
 }
-.projects img {
+.screenshot {
     border: 2px solid #333;
     border-radius: 3%;
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+.gitRepo {
+    display: block;
+    margin: 30px auto;
 }
 /* .contactText {
     display: grid;
@@ -154,11 +158,15 @@ h3 {
         width: 250px;
         height: 250px;
     }
-    .projects img {
+    .screenshot {
         border: 4px solid #333;
         border-radius: 1%;
         width: 90%;
         height: auto;
+    }
+    .gitRepo {
+        width: 55px;
+        height: 55px;
     }
     p {
         font-size: 30px;
