--- a/style.css
+++ b/style.css
@@ -3,12 +3,16 @@
     /* background-color: black;
     color: blanchedalmond; */
 }
-html, body, header, main, footer {
-    min-width: 414px;
+html {
+    min-width: 300px;
+}
+header, main, footer {
+    min-width: 300px;
 }
 body {
     border: 5px solid #333;
     margin: 5px;
+    min-width: 300px;
 }
 footer, h3, .navBar a {
     font-weight: bold;
@@ -30,6 +34,11 @@ footer {
 }
 .navBar, .content, footer {
     font-family: 'Source Code Pro', monospace;
+}
+.navBar ul {
+    margin-left: 30px;
+    margin-right: 30px;
+    padding-left: 0px;
 }
 .navBar li {
     list-style-type: none;
@@ -164,6 +173,9 @@ h3 {
         text-align: left;
         font-size: 45px;
     }
+    .skills li, h4 {
+        font-size: 35px;
+    }
     .aboutText img {
         border: 4px solid #333;
         width: 250px;
@@ -181,7 +193,7 @@ h3 {
     }
     .contactText {
         display: grid;
-        grid-template-columns: 2fr 3fr;
+        grid-template-columns: 1fr 3fr 2fr;
         grid-template-rows: 1fr 1fr 1fr 1fr;
     }
     .contactTitle {
