--- a/style.css
+++ b/style.css
@@ -4,8 +4,11 @@
     color: blanchedalmond; */
 }
 html {
-    min-width: 300px;
+    min-width: 360px;
     scroll-behavior: smooth;
+    max-width: 1100px;
+    margin-left: auto;
+    margin-right: auto;
 }
 header, main, footer {
     min-width: 300px;
