--- a/style.css
+++ b/style.css
@@ -51,6 +51,8 @@ footer {
     margin: 0px; */
 }
 .navBar {
+    /* display: flex;
+    justify-content: center; */
     position:-webkit-sticky;
     position: sticky;
     top: 0;
@@ -167,6 +169,10 @@ h3 {
         text-align: right;
         margin-top: 70px;
         font-size: 45px;
+    }
+    .navBar {
+        display: flex;
+        justify-content: center;
     }
     .navBar a {
         font-size: 30px;
