--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ h3 {
 }
 @media (min-width: 415px) {
     body {
-        border: 10px solid #333;
+        border: 10px solid var(--border-color);
         margin: 20px;
     }
     .title {
@@ -232,12 +232,12 @@ h3 {
         font-size: 35px;
     }
     .aboutText img {
-        border: 4px solid #333;
+        border: 4px solid var(--border-color);
         width: 250px;
         height: 250px;
     }
     .screenshot {
-        border: 4px solid #333;
+        border: 4px solid var(--border-color);
         border-radius: 1%;
         width: 90%;
         height: auto;
