--- a/style.css
+++ b/style.css
@@ -289,6 +289,10 @@ h3 {
     padding-left: 27px;
     padding-right: 27px;
   }
+  .navBarDarkModeIcon img {
+    width: 50px;
+    height: auto;
+  }
   h3 {
     text-align: left;
     font-size: 45px;
