Move dark mode button to sticky bottom left

--- a/style.css
+++ b/style.css
@@ -212,6 +212,17 @@ h3 {
   margin: 10px;
   padding: 5px;
 }
+.navBarDarkModeIcon {
+  position: -webkit-sticky;
+  position: sticky;
+  bottom: 0;
+  display: flex;
+  justify-content: flex-start;
+  /* z-index: 100; */
+  /* position: fixed;
+  bottom: 0px;
+  right: 0px; */
+}
 
 @media (max-width: 414px) {
   #linkedinLinkText,
