--- a/style.css
+++ b/style.css
@@ -217,11 +217,14 @@ h3 {
   position: sticky;
   bottom: 0;
   display: flex;
-  justify-content: flex-start;
-  /* z-index: 100; */
+  justify-content: flex-end;
+  z-index: 101;
   /* position: fixed;
   bottom: 0px;
   right: 0px; */
+}
+#switch {
+  background-color: transparent;
 }
 
 @media (max-width: 414px) {
