--- a/style.css
+++ b/style.css
@@ -218,13 +218,17 @@ h3 {
   bottom: 0;
   display: flex;
   justify-content: flex-end;
-  z-index: 101;
+  z-index: 99;
   /* position: fixed;
   bottom: 0px;
   right: 0px; */
 }
 #switch {
   background-color: transparent;
+  /* background-color: rgb(51,51,51,0.3); */
+  border: none;
+  width: 100px;
+  height: 150px;
 }
 
 @media (max-width: 414px) {
