--- a/style.css
+++ b/style.css
@@ -202,6 +202,15 @@ h3 {
 .gitRepo {
   display: block;
   margin: 30px auto;
+  -webkit-transform: rotate(0) scale(1);
+  transform: rotate(0) scale(1);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+}
+
+.gitRepo:hover {
+  -webkit-transform: rotate(15deg) scale(1.3);
+  transform: rotate(15deg) scale(1.3);
 }
 
 /* .contactText {
