--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   --navBar-background-color: #333;
   --navBarA-color: #f2f2f2;
   --grayscale: grayscale(0%);
+  --dark-mode-button-background-color: rgba(67, 4, 126, 0.562);
 }
 /* DARK MODE */
 [theme="dark"] {
@@ -15,6 +16,7 @@
   --navBar-background-color: black;
   --navBarA-color: white;
   --grayscale: grayscale(30%);
+  --dark-mode-button-background-color: rgba(230, 205, 174, 0.5);
 }
 .aboutText img,
 .screenshot {
@@ -237,22 +239,24 @@ h3 {
   padding: 5px;
 }
 .navBarDarkModeIcon {
-  position: -webkit-sticky;
+  /* position: -webkit-sticky;
   position: sticky;
-  bottom: 0;
+  bottom: 25px;
   display: flex;
   justify-content: flex-end;
-  z-index: 99;
-  /* position: fixed;
-  bottom: 0px;
-  right: 0px; */
+  z-index: 99; */
+  position: fixed;
+  bottom: 30px;
+  right: 10px;
+  /* background-color: rgb(230, 205, 174, 0.5); */
+  background-color: var(--dark-mode-button-background-color);
+  border-radius: 50%;
 }
 #switch {
   background-color: transparent;
   /* background-color: rgb(51,51,51,0.3); */
   border: none;
-  width: 100px;
-  height: 150px;
+  cursor: pointer;
 }
 
 @media (max-width: 414px) {
@@ -331,10 +335,6 @@ h3 {
     padding-left: 27px;
     padding-right: 27px;
   }
-  .navBarDarkModeIcon img {
-    width: 50px;
-    height: auto;
-  }
   h3 {
     text-align: left;
     font-size: 45px;
@@ -406,5 +406,14 @@ h3 {
   }
   p {
     font-size: 30px;
+  }
+  .navBarDarkModeIcon img {
+    width: 60px;
+    height: auto;
+  }
+  .navBarDarkModeIcon {
+    position: fixed;
+    bottom: 55px;
+    right: 37px;
   }
 }
