Add margin to <p> for full screen and fix footer

--- a/style.css
+++ b/style.css
@@ -52,14 +52,14 @@ body {
   min-width: 300px;
 }
 
-footer,
 h3,
 .navBar a {
   font-weight: bold;
 }
 
-footer {
+footer span{
   font-style: italic;
+  font-weight: bold;
 }
 
 .content,
@@ -406,6 +406,11 @@ h3 {
   }
   p {
     font-size: 30px;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  .skills li {
+    margin-left: 20px;
   }
   .navBarDarkModeIcon img {
     width: 60px;
