--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@ h3 {
   box-shadow: 20px 20px 30px #ccc;  
 } */
 
-.gitRepo {
+.gitRepo, .item1, .item3, .item5 {
   display: block;
   margin: 30px auto;
   -webkit-transform: rotate(0) scale(1);
@@ -210,7 +210,7 @@ h3 {
 	transition: .3s ease-in-out;
 }
 
-.gitRepo:hover {
+.gitRepo:hover, .item1:hover, .item3:hover, .item5:hover {
   -webkit-transform: rotate(15deg) scale(1.3);
   transform: rotate(15deg) scale(1.3);
 }
