--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
   --navBar-background-color: #333;
   --navBarA-color: #f2f2f2;
   --grayscale: grayscale(0%);
-  --dark-mode-button-background-color: rgba(67, 4, 126, 0.562);
+  /* --dark-mode-button-background-color: rgba(67, 4, 126, 0.562); */
+  --dark-mode-button-background-color: rgba(190, 141, 236, 0.562);
 }
 /* DARK MODE */
 [theme="dark"] {
@@ -53,7 +54,7 @@ body {
 }
 
 h3,
-.navBar a {
+.navBarLinks a {
   font-weight: bold;
 }
 
@@ -109,31 +110,34 @@ footer {
   font-family: "Source Code Pro", monospace;
 }
 
-.navBar ul {
+.navBarLinks {
   margin-left: 30px;
-  margin-right: 30px;
+  margin-right: 0px;
   padding-left: 0px;
 }
-
-.navBar li {
-  list-style-type: none;
-  display: inline;
-  /* padding: 3px;
-    margin: 0px; */
+.darkmodeButton {
+  margin-left: 5px;
+  margin-right: 30px;
+  padding-top: 5px;
 }
 
 .navBar {
-  /* display: flex;
-    justify-content: center; */
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
   background-color: var(--navBar-background-color);
   margin: 0px;
-  padding: 5px;
-  display: flex;
-  flex-direction: column;
+  padding: 6px 5px 10px 5px;
   z-index: 100;
+}
+
+.navBarLinks {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
 
 .navBarDarkModeIcon {
@@ -142,23 +146,23 @@ footer {
   align-items: center;
 }
 
-.navBar a {
+.navBarLinks a {
   color: var(--navBarA-color);
   text-align: center;
-  padding-left: 1px;
-  padding-right: 1px;
-  padding-top: 25px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 22px;
   padding-bottom: 22px;
   text-decoration: none;
   font-size: 12px;
 }
 
-.navBar a:hover {
+.navBarLinks a:hover {
   background-color: #ddd;
   color: black;
 }
 
-.navBar a:active {
+.navBarLinks a:active {
   background-color: #04aa6d;
   color: white;
 }
@@ -245,9 +249,11 @@ h3 {
   display: flex;
   justify-content: flex-end;
   z-index: 99; */
-  position: fixed;
+
+  /* position: fixed;
   bottom: 30px;
-  right: 10px;
+  right: 10px; */
+  
   /* background-color: rgb(230, 205, 174, 0.5); */
   background-color: var(--dark-mode-button-background-color);
   border-radius: 50%;
@@ -329,8 +335,10 @@ h3 {
   .navBar {
     display: flex;
     justify-content: center;
+    padding-top: 4px;
+    padding-bottom: 5px;
   }
-  .navBar a {
+  .navBarLinks a {
     font-size: 30px;
     padding-left: 27px;
     padding-right: 27px;
