--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ h3,
   font-weight: bold;
 }
 
-footer span{
+footer span {
   font-style: italic;
   font-weight: bold;
 }
@@ -67,8 +67,7 @@ footer span{
 .about,
 .aboutText,
 .projects,
-.project2,
-.project1,
+.project,
 .resume,
 .resumeText,
 .contact,
@@ -83,8 +82,8 @@ footer span{
 }
 
 .typing {
-  width:  6ch;
-  animation: typing 2s steps(6), blink .5s step-end infinite alternate;
+  width: 6ch;
+  animation: typing 2s steps(6), blink 0.5s step-end infinite alternate;
   white-space: nowrap;
   overflow: hidden;
   border-right: 3px solid;
@@ -94,13 +93,13 @@ footer span{
 
 @keyframes typing {
   from {
-    width: 0
+    width: 0;
   }
 }
 
 @keyframes blink {
   50% {
-    border-color: transparent
+    border-color: transparent;
   }
 }
 
@@ -204,9 +203,10 @@ h3 {
   margin-right: auto;
 }
 
-.aboutText span, .projects span {
+.aboutText span,
+.projects span {
   -webkit-text-stroke: 2px var(--text-color);
-  -webkit-text-fill-color:transparent;
+  -webkit-text-fill-color: transparent;
   /* font-weight: bold; */
   font-size: larger;
   font-style: italic;
@@ -219,14 +219,14 @@ h3 {
   margin-left: auto;
   margin-right: auto;
   -webkit-transform: scale(1);
-	transform: scale(1);
-	-webkit-transition: .3s ease-in-out;
-	transition: .3s ease-in-out;
+  transform: scale(1);
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
 }
 
 .screenshot:hover {
   -webkit-transform: scale(1.1);
-	transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 /* .screenshot:hover {
@@ -235,16 +235,22 @@ h3 {
   box-shadow: 20px 20px 30px #ccc;  
 } */
 
-.gitRepo, .item1, .item3, .item5 {
+.gitRepo,
+.item1,
+.item3,
+.item5 {
   display: block;
   margin: 30px auto;
   -webkit-transform: rotate(0) scale(1);
   transform: rotate(0) scale(1);
-	-webkit-transition: .3s ease-in-out;
-	transition: .3s ease-in-out;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
 }
 
-.gitRepo:hover, .item1:hover, .item3:hover, .item5:hover {
+.gitRepo:hover,
+.item1:hover,
+.item3:hover,
+.item5:hover {
   -webkit-transform: rotate(15deg) scale(1.3);
   transform: rotate(15deg) scale(1.3);
 }
@@ -283,7 +289,7 @@ h3 {
   /* position: fixed;
   bottom: 30px;
   right: 10px; */
-  
+
   /* background-color: rgb(230, 205, 174, 0.5); */
   background-color: var(--dark-mode-button-background-color);
   border-radius: 25%;
@@ -389,7 +395,8 @@ h3 {
     width: 250px;
     height: 250px;
   }
-  .aboutText span, .projects span {
+  .aboutText span,
+  .projects span {
     font-weight: bold;
   }
   .screenshot {
