--- a/style.css
+++ b/style.css
@@ -201,6 +201,7 @@ h3 {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 50px;
 }
 
 .aboutText span,
@@ -210,6 +211,19 @@ h3 {
   /* font-weight: bold; */
   font-size: larger;
   font-style: italic;
+}
+
+.projectsTitleDiv h3 {
+  padding-top: 70px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.project h3 {
+  text-align: center;
+  font-size: 22px;
+  margin-top: 15px;
+  margin-bottom: 45px;
 }
 
 .screenshot {
@@ -404,6 +418,18 @@ h3 {
   .projects span {
     font-weight: bold;
   }
+  .projectsTitleDiv h3 {
+    padding-top: 110px;
+    padding-left: 15px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+  .project h3 {
+    text-align: left;
+    font-size: 45px;
+    margin-top: 45px;
+    margin-bottom: 45px;
+  }
   .screenshot {
     border: 4px solid var(--border-color);
     border-radius: 1%;
@@ -413,6 +439,9 @@ h3 {
   .gitRepo {
     width: 55px;
     height: 55px;
+  }
+  .resumeText h3 {
+    padding-top: 60px;
   }
   .contactText {
     display: grid;
