--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   --dark-mode-button-background-color: rgba(190, 141, 236, 0.562);
 }
 /* DARK MODE */
-[theme="dark"] {
+[theme='dark'] {
   --background-color: #333;
   --text-color: #f2f2f2;
   --border-color: black;
@@ -106,7 +106,7 @@ footer span {
 .title h1,
 .title h2,
 .title h4 {
-  font-family: "Press Start 2P", cursive;
+  font-family: 'Press Start 2P', cursive;
   line-height: 1.6;
 }
 
@@ -128,7 +128,7 @@ footer span {
 .navBar,
 .content,
 footer {
-  font-family: "Source Code Pro", monospace;
+  font-family: 'Source Code Pro', monospace;
 }
 
 .navBarLinks {
@@ -252,7 +252,8 @@ h3 {
 .gitRepo,
 .item1,
 .item3,
-.item5 {
+.item5,
+.item7 {
   display: block;
   margin: 30px auto;
   -webkit-transform: rotate(0) scale(1);
@@ -264,7 +265,8 @@ h3 {
 .gitRepo:hover,
 .item1:hover,
 .item3:hover,
-.item5:hover {
+.item5:hover,
+.item7:hover {
   -webkit-transform: rotate(15deg) scale(1.3);
   transform: rotate(15deg) scale(1.3);
 }
@@ -321,16 +323,17 @@ h3 {
 @media (max-width: 414px) {
   #linkedinLinkText,
   #githubLinkText,
-  #emailLinkText {
+  #emailLinkText,
+  #twitterLinkText {
     display: none;
   }
   .contactText {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
   }
   .contactTitle {
-    grid-column: 1 / span 3;
+    grid-column: 1 / span 2;
     grid-row: 1 / span 1;
   }
   .item1 {
@@ -342,12 +345,17 @@ h3 {
     grid-row: 2 / span 1;
   }
   .item5 {
-    grid-column: 3 / span 1;
-    grid-row: 2 / span 1;
+    grid-column: 1 / span 1;
+    grid-row: 3 / span 1;
+  }
+  .item7 {
+    grid-column: 2 / span 1;
+    grid-row: 3 / span 1;
   }
   .item1,
   .item3,
-  .item5 {
+  .item5,
+  .item7 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -446,7 +454,7 @@ h3 {
   .contactText {
     display: grid;
     grid-template-columns: 3fr 20fr 0.5fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
   }
   .contactTitle {
     grid-column: 1 / span 2;
@@ -475,16 +483,26 @@ h3 {
     grid-row: 4 / span 1;
     grid-column: 2 / span 1;
   }
+  .item7 {
+    grid-row: 5 / span 1;
+    grid-column: 1 / span 1;
+  }
+  .item8 {
+    grid-row: 5 / span 1;
+    grid-column: 2 / span 1;
+  }
   .item1,
   .item3,
-  .item5 {
+  .item5,
+  .item7 {
     display: flex;
     justify-content: center;
     align-items: center;
   }
   .item2,
   .item4,
-  .item6 {
+  .item6,
+  .item8 {
     display: flex;
     /* justify-content: center; */
     align-items: center;
