Add webkit o moz for typing animation

--- a/style.css
+++ b/style.css
@@ -84,6 +84,9 @@ footer span {
 .typing {
   width: 6ch;
   animation: typing 2s steps(6), blink 0.5s step-end infinite alternate;
+  -webkit-animation: typing 2s steps(6), blink 0.5s step-end infinite alternate;
+  -o-animation: typing 2s steps(6), blink 0.5s step-end infinite alternate;
+  -moz-animation: typing 2s steps(6), blink 0.5s step-end infinite alternate;
   white-space: nowrap;
   overflow: hidden;
   border-right: 3px solid;
@@ -92,6 +95,21 @@ footer span {
 }
 
 @keyframes typing {
+  from {
+    width: 0;
+  }
+}
+@-webkit-keyframes typing {
+  from {
+    width: 0;
+  }
+}
+@-o-keyframes typing {
+  from {
+    width: 0;
+  }
+}
+@-moz-keyframes typing {
   from {
     width: 0;
   }
