--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
 
 html {
   min-width: 360px;
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
   max-width: 1100px;
   margin-left: auto;
   margin-right: auto;
