--- a/newstyle.css
+++ b/newstyle.css
@@ -146,21 +146,20 @@ footer {
   font-family: 'Source Code Pro', monospace;
 }
 
-.navBarLinks {
+/* .navBarLinks {
   margin-left: 1.875rem;
   margin-right: 0rem;
   padding-left: 0rem;
-}
-.darkmodeButton {
+} */
+/* .darkmodeButton {
   margin-left: 0.3125rem;
   margin-right: 1.875rem;
   padding-top: 0.3125rem;
-}
+} */
 
 .navBar {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   position: -webkit-sticky;
   position: sticky;
@@ -171,20 +170,10 @@ footer {
   z-index: 100;
 }
 
-.navBarLinks {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-}
-
-.navBarDarkModeIcon {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .navBarLinks a {
   color: var(--navBarA-color);
   text-align: center;
+  margin: 0;
   padding-left: 0.3125rem;
   padding-right: 0.3125rem;
   padding-top: 1.375rem;
@@ -201,6 +190,12 @@ footer {
 .navBarLinks a:active {
   background-color: #04aa6d;
   color: white;
+}
+
+.navBarDarkModeIcon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 h3 {
@@ -337,7 +332,7 @@ h3 {
   cursor: pointer;
 }
 
-@media (max-width: 414px) {
+@media (max-width: 549px) {
   #linkedinLinkText,
   #githubLinkText,
   #emailLinkText,
@@ -379,7 +374,7 @@ h3 {
   }
 }
 
-@media (min-width: 415px) {
+@media (min-width: 550px) {
   body {
     border: 0.625rem solid var(--border-color);
     margin: 1.25rem;
@@ -415,18 +410,18 @@ h3 {
     flex-direction: row;
   } */
 
-  .navBar {
+  /* .navBar {
     display: flex;
     justify-content: center;
     padding-top: 4px;
     padding-bottom: 5px;
-  }
+  } */
   .navBarLinks a {
     font-size: calc(16px + (24 - 16) * ((100vw - 360px) / (1100 - 360)));
-    padding-left: 27px;
+    /* padding-left: 27px;
     padding-right: 27px;
     padding-top: 22px;
-    padding-bottom: 22px;
+    padding-bottom: 22px; */
   }
   h3 {
     text-align: left;
